[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/avenixel-regular.tres" type="DynamicFontData" id=2]
[ext_resource path="res://paralax.background.png" type="Texture" id=3]
[ext_resource path="res://platforms.tileset.tres" type="TileSet" id=4]
[ext_resource path="res://paralax.mountains.png" type="Texture" id=5]
[ext_resource path="res://paralax.midground.png" type="Texture" id=6]
[ext_resource path="res://start_menu/StartMenu.gd" type="Script" id=7]
[ext_resource path="res://bofl-logo.png" type="Texture" id=8]
[ext_resource path="res://object.rocket.png" type="Texture" id=9]
[ext_resource path="res://effect.smoke.png" type="Texture" id=10]
[ext_resource path="res://Pickup.tscn" type="PackedScene" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.172515, 0.30117, 0.385965, 1 )
colors = PoolColorArray( 0.821777, 0.118835, 0.0385208, 1, 0.917502, 0.503022, 0.189496, 1, 0.912696, 0.672694, 0.142283, 1, 0.908691, 0.846529, 0.102938, 1, 1, 1, 1, 1 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, -0.398371, 0, 0, Vector2( 1, 1 ), -0.135917, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.192157 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 2
outline_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 2
outline_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
outline_color = Color( 0.0823529, 0.113725, 0.156863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=8]
Label/colors/font_color = Color( 0.823529, 0.415686, 0.619608, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 7 )
Label/styles/normal = null

[node name="StartMenu" type="Node2D"]
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 184, 120 )
motion_scale = Vector2( 0, 0 )
motion_offset = Vector2( 0, 1 )

[node name="paralaxbackground" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -4, -1 )
texture = ExtResource( 3 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 184, 120 )
motion_scale = Vector2( 0.2, 0.25 )
motion_mirroring = Vector2( 720, 0 )

[node name="Comet" type="CPUParticles2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 216, -159 )
amount = 256
lifetime = 0.75
speed_scale = 0.25
randomness = 0.15
lifetime_randomness = 0.35
emission_shape = 1
emission_sphere_radius = 2.5
gravity = Vector2( 150, -98 )
color_ramp = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2/Comet"]
show_behind_parent = true
position = Vector2( 1, -1 )
rotation = -2.13977
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 96, 128 )

[node name="Crash" type="CPUParticles2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -146, 64 )
emitting = false
speed_scale = 0.5
texture = ExtResource( 10 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, -50 )
angular_velocity = 10.0
angular_velocity_random = 1.0
radial_accel = 3.83
radial_accel_random = 0.33
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="paralaxmountains" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 176, 6 )
texture = ExtResource( 5 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 184, 120 )
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 720, 0 )

[node name="paralaxmidground" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -184, -120 )
texture = ExtResource( 6 )
centered = false

[node name="TileMap" type="TileMap" parent="." groups=[
"tiles",
]]
visible = false
position = Vector2( 4, 6 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
collision_layer = 4
collision_mask = 15
format = 1
tile_data = PoolIntArray( -131056, 1, 0, -131055, 1, 1, -131054, 1, 1, -131053, 1, 1, -131052, 1, 1, -131051, 1, 1, -131050, 1, 1, -131049, 1, 1, -131048, 1, 1, -131047, 1, 1, -131046, 1, 1, -131045, 1, 1, -131044, 1, 1, -131043, 1, 1, -131042, 1, 1, -131041, 1, 1, -131040, 1, 1, -131039, 1, 1, -131038, 1, 1, -131037, 1, 1, -131036, 1, 1, -131035, 1, 1, -131034, 1, 1, -131033, 1, 1, -131032, 1, 1, -131031, 1, 2, -1, 1, 6, -65536, 1, 196609, -65535, 1, 196609, -65534, 1, 196609, -65533, 1, 196609, -65532, 1, 196609, -65531, 1, 196609, -65530, 1, 196609, -65529, 1, 196609, -65528, 1, 196609, -65527, 1, 196609, -65526, 1, 196609, -65525, 1, 196609, -65524, 1, 196609, -65523, 1, 196609, -65522, 1, 196609, -65521, 1, 196609, -65520, 1, 196617, -65519, 1, 65537, -65518, 1, 65537, -65517, 1, 65537, -65516, 1, 65537, -65515, 1, 65537, -65514, 1, 65537, -65513, 1, 65537, -65512, 1, 65537, -65511, 1, 65537, -65510, 1, 65537, -65509, 1, 65537, -65508, 1, 65537, -65507, 1, 65537, -65506, 1, 65537, -65505, 1, 65537, -65504, 1, 65537, -65503, 1, 65537, -65502, 1, 65537, -65501, 1, 65537, -65500, 1, 65537, -65499, 1, 65537, -65498, 1, 65537, -65497, 1, 65537, -65496, 1, 65537, -65495, 1, 65540, -65494, 1, 2, 65535, 1, 65539, 16, 1, 131072, 17, 1, 5, 18, 1, 65537, 19, 1, 65537, 20, 1, 65537, 21, 1, 65537, 22, 1, 65537, 23, 1, 65537, 24, 1, 65537, 25, 1, 65537, 26, 1, 65537, 27, 1, 65537, 28, 1, 65537, 29, 1, 65537, 30, 1, 65537, 31, 1, 65537, 32, 1, 65537, 33, 1, 65537, 34, 1, 65537, 35, 1, 65537, 36, 1, 65537, 37, 1, 65537, 38, 1, 65537, 39, 1, 65537, 40, 1, 4, 41, 1, 131073, 42, 1, 131074, 131071, 1, 65539, 65553, 1, 131072, 65554, 1, 131073, 65555, 1, 5, 65556, 1, 65537, 65557, 1, 65537, 65558, 1, 65537, 65559, 1, 65537, 65560, 1, 65537, 65561, 1, 65537, 65562, 1, 65537, 65563, 1, 65537, 65564, 1, 65537, 65565, 1, 65537, 65566, 1, 65537, 65567, 1, 65537, 65568, 1, 65537, 65569, 1, 65537, 65570, 1, 65537, 65571, 1, 65537, 65572, 1, 65537, 65573, 1, 65537, 65574, 1, 4, 65575, 1, 131073, 65576, 1, 131074, 196607, 1, 65539, 131091, 1, 131072, 131092, 1, 5, 131093, 1, 65537, 131094, 1, 65537, 131095, 1, 65537, 131096, 1, 65537, 131097, 1, 65537, 131098, 1, 65537, 131099, 1, 4, 131100, 1, 131073, 131101, 1, 131073, 131102, 1, 131081, 131103, 1, 131073, 131104, 1, 131073, 131105, 1, 131081, 131106, 1, 131073, 131107, 1, 131073, 131108, 1, 131073, 131109, 1, 131081, 131110, 1, 131074, 262143, 1, 65539, 196628, 1, 65536, 196629, 1, 65537, 196630, 1, 65537, 196631, 1, 65537, 196632, 1, 65537, 196633, 1, 65537, 196634, 1, 65537, 196635, 1, 65538, 196638, 1, 131075, 196641, 1, 131075, 196645, 1, 131075, 327679, 1, 65539, 262164, 1, 131072, 262165, 1, 5, 262166, 1, 65537, 262167, 1, 4, 262168, 1, 131073, 262169, 1, 131073, 262170, 1, 131081, 262171, 1, 131074, 393215, 1, 65539, 327701, 1, 131072, 327702, 1, 131073, 327703, 1, 131074, 327706, 1, 131075, 458751, 1, 65539, 524287, 1, 65539, 589823, 1, 65539, 524341, 1, 3, 655359, 1, 65539, 589876, 1, 0, 589877, 1, 65545, 720895, 1, 65539, 655381, 1, 0, 655382, 1, 1, 655383, 1, 2, 655409, 1, 0, 655410, 1, 1, 655411, 1, 1, 655412, 1, 65541, 655413, 1, 65538, 655501, 1, 0, 655502, 1, 1, 655503, 1, 1, 655504, 1, 1, 655505, 1, 1, 655506, 1, 1, 655507, 1, 1, 655508, 1, 1, 655509, 1, 2, 655515, 1, 3, 786431, 1, 65539, 720915, 1, 0, 720916, 1, 1, 720917, 1, 65541, 720918, 1, 65537, 720919, 1, 65538, 720945, 1, 65536, 720946, 1, 65537, 720947, 1, 65537, 720948, 1, 65537, 720949, 1, 65538, 721037, 1, 65536, 721038, 1, 65537, 721039, 1, 65537, 721040, 1, 65537, 721041, 1, 65537, 721042, 1, 65537, 721043, 1, 65537, 721044, 1, 65537, 721045, 1, 65538, 721051, 1, 65539, 851967, 1, 65539, 786437, 1, 0, 786438, 1, 1, 786439, 1, 2, 786451, 1, 65536, 786452, 1, 65537, 786453, 1, 65537, 786454, 1, 65537, 786455, 1, 65538, 786457, 1, 3, 786459, 1, 3, 786462, 1, 3, 786464, 1, 0, 786465, 1, 2, 786481, 1, 65536, 786482, 1, 65537, 786483, 1, 65537, 786484, 1, 65537, 786485, 1, 65538, 786489, 1, 3, 786499, 1, 3, 786573, 1, 65536, 786574, 1, 65537, 786575, 1, 65537, 786576, 1, 65537, 786577, 1, 65537, 786578, 1, 65537, 786579, 1, 65537, 786580, 1, 65537, 786581, 1, 65538, 786587, 1, 65539, 917503, 1, 65539, 851973, 1, 65536, 851974, 1, 65537, 851975, 1, 65538, 851987, 1, 65536, 851988, 1, 65537, 851989, 1, 65537, 851990, 1, 65537, 851991, 1, 65538, 851993, 1, 65539, 851995, 1, 65539, 851998, 1, 65544, 851999, 1, 1, 852000, 1, 65541, 852001, 1, 65540, 852002, 1, 2, 852008, 1, 0, 852009, 1, 2, 852014, 1, 0, 852015, 1, 1, 852016, 1, 1, 852017, 1, 65541, 852018, 1, 65537, 852019, 1, 65537, 852020, 1, 65537, 852021, 1, 65538, 852023, 1, 0, 852024, 1, 1, 852025, 1, 65545, 852033, 1, 0, 852034, 1, 1, 852035, 1, 65545, 852037, 1, 3, 852109, 1, 65536, 852110, 1, 65537, 852111, 1, 65537, 852112, 1, 65537, 852113, 1, 65537, 852114, 1, 65537, 852115, 1, 65537, 852116, 1, 65537, 852117, 1, 65540, 852118, 1, 1, 852119, 1, 1, 852120, 1, 1, 852121, 1, 1, 852122, 1, 1, 852123, 1, 65545, 983039, 1, 65542, 917504, 1, 131083, 917505, 1, 1, 917506, 1, 1, 917507, 1, 1, 917508, 1, 1, 917509, 1, 65541, 917510, 1, 65537, 917511, 1, 65540, 917512, 1, 1, 917513, 1, 1, 917514, 1, 1, 917515, 1, 1, 917516, 1, 1, 917517, 1, 1, 917518, 1, 1, 917519, 1, 1, 917520, 1, 1, 917521, 1, 1, 917522, 1, 1, 917523, 1, 65541, 917524, 1, 65537, 917525, 1, 65537, 917526, 1, 65537, 917527, 1, 65540, 917528, 1, 1, 917529, 1, 131080, 917530, 1, 1, 917531, 1, 131080, 917532, 1, 1, 917533, 1, 1, 917534, 1, 65541, 917535, 1, 65537, 917536, 1, 65537, 917537, 1, 65537, 917538, 1, 65540, 917539, 1, 1, 917540, 1, 1, 917541, 1, 1, 917542, 1, 1, 917543, 1, 1, 917544, 1, 65541, 917545, 1, 65540, 917546, 1, 1, 917547, 1, 1, 917548, 1, 1, 917549, 1, 1, 917550, 1, 65541, 917551, 1, 65537, 917552, 1, 65537, 917553, 1, 65537, 917554, 1, 65537, 917555, 1, 65537, 917556, 1, 65537, 917557, 1, 65540, 917558, 1, 1, 917559, 1, 65541, 917560, 1, 65537, 917561, 1, 65540, 917562, 1, 2, 917567, 1, 0, 917568, 1, 1, 917569, 1, 65541, 917570, 1, 65537, 917571, 1, 65540, 917572, 1, 1, 917573, 1, 131080, 917574, 1, 1, 917575, 1, 1, 917576, 1, 1, 917577, 1, 1, 917578, 1, 1, 917579, 1, 1, 917580, 1, 1, 917581, 1, 1, 917582, 1, 1, 917583, 1, 1, 917584, 1, 1, 917585, 1, 1, 917586, 1, 1, 917587, 1, 1, 917588, 1, 1, 917589, 1, 1, 917590, 1, 2, 917597, 1, 0, 917598, 1, 1, 917599, 1, 2, 917610, 1, 3, 917622, 1, 3, 917633, 1, 0, 917634, 1, 1, 917635, 1, 1, 917636, 1, 1, 917637, 1, 1, 917638, 1, 1, 917639, 1, 1, 917640, 1, 1, 917641, 1, 1, 917642, 1, 1, 917643, 1, 1, 917644, 1, 1, 917645, 1, 65541, 917646, 1, 65537, 917647, 1, 65537, 917648, 1, 65537, 917649, 1, 65537, 917650, 1, 65537, 917651, 1, 65537, 917652, 1, 65537, 917653, 1, 65537, 917654, 1, 65537, 917655, 1, 65537, 917656, 1, 65537, 917657, 1, 65537, 917658, 1, 65537, 917659, 1, 65538, 983040, 1, 65536, 983041, 1, 65537, 983042, 1, 65537, 983043, 1, 65537, 983044, 1, 65537, 983045, 1, 65537, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65537, 983053, 1, 65537, 983054, 1, 65537, 983055, 1, 65537, 983056, 1, 65537, 983057, 1, 65537, 983058, 1, 65537, 983059, 1, 65537, 983060, 1, 65537, 983061, 1, 65537, 983062, 1, 65537, 983063, 1, 65537, 983064, 1, 65537, 983065, 1, 65537, 983066, 1, 65537, 983067, 1, 65537, 983068, 1, 65537, 983069, 1, 65537, 983070, 1, 65537, 983071, 1, 65537, 983072, 1, 65537, 983073, 1, 65537, 983074, 1, 65537, 983075, 1, 65537, 983076, 1, 65537, 983077, 1, 65537, 983078, 1, 65537, 983079, 1, 65537, 983080, 1, 65537, 983081, 1, 65537, 983082, 1, 65537, 983083, 1, 65537, 983084, 1, 65537, 983085, 1, 65537, 983086, 1, 65537, 983087, 1, 65537, 983088, 1, 65537, 983089, 1, 65537, 983090, 1, 65537, 983091, 1, 65537, 983092, 1, 65537, 983093, 1, 65537, 983094, 1, 65537, 983095, 1, 65537, 983096, 1, 65537, 983097, 1, 65537, 983098, 1, 65538, 983103, 1, 65536, 983104, 1, 65537, 983105, 1, 65537, 983106, 1, 65537, 983107, 1, 65537, 983108, 1, 65537, 983109, 1, 65537, 983110, 1, 65537, 983111, 1, 65537, 983112, 1, 65537, 983113, 1, 65537, 983114, 1, 65537, 983115, 1, 65537, 983116, 1, 65537, 983117, 1, 65537, 983118, 1, 65537, 983119, 1, 65537, 983120, 1, 65537, 983121, 1, 65537, 983122, 1, 65537, 983123, 1, 65537, 983124, 1, 65537, 983125, 1, 65537, 983126, 1, 65538, 983133, 1, 65536, 983134, 1, 65537, 983135, 1, 65538, 983146, 1, 65539, 983158, 1, 65539, 983169, 1, 65536, 983170, 1, 65537, 983171, 1, 65537, 983172, 1, 65537, 983173, 1, 65537, 983174, 1, 65537, 983175, 1, 65537, 983176, 1, 65537, 983177, 1, 65537, 983178, 1, 65537, 983179, 1, 65537, 983180, 1, 65537, 983181, 1, 65537, 983182, 1, 65537, 983183, 1, 65537, 983184, 1, 65537, 983185, 1, 65537, 983186, 1, 65537, 983187, 1, 65537, 983188, 1, 65537, 983189, 1, 65537, 983190, 1, 65537, 983191, 1, 65537, 983192, 1, 65537, 983193, 1, 65537, 983194, 1, 65537, 983195, 1, 65538, 1048576, 1, 131072, 1048577, 1, 131073, 1048578, 1, 131073, 1048579, 1, 131073, 1048580, 1, 131073, 1048581, 1, 131073, 1048582, 1, 131073, 1048583, 1, 131073, 1048584, 1, 131073, 1048585, 1, 131073, 1048586, 1, 131073, 1048587, 1, 131073, 1048588, 1, 131073, 1048589, 1, 131073, 1048590, 1, 131073, 1048591, 1, 131073, 1048592, 1, 131073, 1048593, 1, 131073, 1048594, 1, 131073, 1048595, 1, 131073, 1048596, 1, 131073, 1048597, 1, 131073, 1048598, 1, 131073, 1048599, 1, 131073, 1048600, 1, 131073, 1048601, 1, 131073, 1048602, 1, 131073, 1048603, 1, 131073, 1048604, 1, 131073, 1048605, 1, 131073, 1048606, 1, 131073, 1048607, 1, 131073, 1048608, 1, 131073, 1048609, 1, 131073, 1048610, 1, 131073, 1048611, 1, 131073, 1048612, 1, 131073, 1048613, 1, 131073, 1048614, 1, 131073, 1048615, 1, 131073, 1048616, 1, 131073, 1048617, 1, 131073, 1048618, 1, 131073, 1048619, 1, 131073, 1048620, 1, 131073, 1048621, 1, 131073, 1048622, 1, 131073, 1048623, 1, 131073, 1048624, 1, 131073, 1048625, 1, 131073, 1048626, 1, 131073, 1048627, 1, 131073, 1048628, 1, 131073, 1048629, 1, 131073, 1048630, 1, 131073, 1048631, 1, 131073, 1048632, 1, 131073, 1048633, 1, 131073, 1048634, 1, 131074, 1048639, 1, 131072, 1048640, 1, 131073, 1048641, 1, 131073, 1048642, 1, 131073, 1048643, 1, 131073, 1048644, 1, 131073, 1048645, 1, 131073, 1048646, 1, 131073, 1048647, 1, 131073, 1048648, 1, 131073, 1048649, 1, 131073, 1048650, 1, 131073, 1048651, 1, 131073, 1048652, 1, 131073, 1048653, 1, 131073, 1048654, 1, 131073, 1048655, 1, 131073, 1048656, 1, 131073, 1048657, 1, 131073, 1048658, 1, 131073, 1048659, 1, 131073, 1048660, 1, 131073, 1048661, 1, 131073, 1048662, 1, 131074, 1048669, 1, 131072, 1048670, 1, 131073, 1048671, 1, 131074, 1048682, 1, 131075, 1048694, 1, 131075, 1048705, 1, 131072, 1048706, 1, 131073, 1048707, 1, 131073, 1048708, 1, 131073, 1048709, 1, 131073, 1048710, 1, 131073, 1048711, 1, 131073, 1048712, 1, 131073, 1048713, 1, 131073, 1048714, 1, 131073, 1048715, 1, 131073, 1048716, 1, 131073, 1048717, 1, 131073, 1048718, 1, 131073, 1048719, 1, 131073, 1048720, 1, 131073, 1048721, 1, 131073, 1048722, 1, 131073, 1048723, 1, 131073, 1048724, 1, 131073, 1048725, 1, 131073, 1048726, 1, 131073, 1048727, 1, 131073, 1048728, 1, 131073, 1048729, 1, 131073, 1048730, 1, 131073, 1048731, 1, 131074, 1114143, 4, 0, 1114146, 4, 0, 1114147, 4, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179664, 4, 0, 1179665, 4, 0, 1179672, 5, 0, 1179673, 5, 0, 1179679, 4, 0, 1179680, 4, 0, 1245195, 5, 0, 1245200, 2, 0, 1245201, 2, 0, 1245205, 2, 0, 1245206, 2, 0, 1245209, 5, 0, 1245211, 5, 0, 1245216, 4, 0, 1310731, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310736, 2, 0, 1310737, 2, 0, 1310741, 2, 0, 1310742, 2, 0, 1310745, 5, 0, 1310746, 5, 0, 1310747, 5, 0, 1310749, 1, 196611, 1310750, 2, 0, 1310756, 1, 0, 1310757, 1, 2, 1376272, 2, 0, 1376273, 2, 0, 1376274, 1, 0, 1376275, 1, 1, 1376276, 1, 2, 1376278, 1, 196608, 1376279, 1, 196609, 1376280, 1, 7, 1376284, 1, 3, 1376291, 1, 0, 1376292, 1, 65541, 1376293, 1, 65538, 1441810, 1, 131072, 1441811, 1, 5, 1441812, 1, 65540, 1441813, 1, 2, 1441814, 3, 0, 1441816, 1, 65544, 1441817, 1, 2, 1441820, 1, 65539, 1441826, 1, 6, 1441827, 1, 196619, 1441828, 1, 131073, 1441829, 1, 9, 1441834, 1, 65546, 1441835, 1, 196610, 1507337, 2, 0, 1507338, 2, 0, 1507347, 1, 131072, 1507348, 1, 131073, 1507349, 1, 196618, 1507350, 1, 7, 1507351, 3, 0, 1507352, 1, 8, 1507353, 1, 131074, 1507356, 1, 65539, 1507359, 1, 6, 1507360, 1, 196609, 1507361, 1, 196609, 1507362, 1, 65543, 1507365, 1, 65542, 1507366, 1, 196609, 1507367, 1, 196609, 1507368, 1, 196609, 1507369, 1, 196610, 1572873, 2, 0, 1572874, 2, 0, 1572875, 2, 0, 1572876, 2, 0, 1572886, 1, 65544, 1572887, 1, 1, 1572888, 1, 65545, 1572892, 1, 65542, 1572893, 1, 196609, 1572894, 1, 196609, 1572895, 1, 65543, 1638414, 1, 0, 1638422, 1, 131072, 1638423, 1, 131073, 1638424, 1, 131074, 1703971, 0, 3, 1769491, 2, 0, 1769492, 2, 0, 1769493, 2, 0, 1769507, 0, 65542, 1769508, 0, 7, 1835031, 0, 3, 1835036, 1, 0, 1835039, 1, 0, 1835044, 0, 65539, 1900560, 2, 0, 1900566, 0, 0, 1900567, 0, 65545, 1900580, 0, 65546, 1900581, 0, 196610, 1966101, 0, 0, 1966102, 0, 196613, 1966103, 0, 131074, 1966116, 0, 65539, 1966129, 2, 3, 2031632, 0, 196608, 2031633, 0, 196609, 2031634, 0, 196609, 2031635, 0, 196609, 2031636, 0, 196609, 2031637, 0, 196619, 2031638, 0, 9, 2031642, 0, 6, 2031643, 0, 196610, 2031651, 0, 6, 2031652, 0, 65543, 2031654, 2, 0, 2031655, 2, 196610, 2031665, 2, 65539, 2097167, 2, 0, 2097168, 2, 0, 2097173, 2, 0, 2097174, 0, 65542, 2097175, 0, 196609, 2097176, 0, 196609, 2097177, 0, 196609, 2097178, 0, 65547, 2097186, 0, 196608, 2097187, 0, 65543, 2097201, 2, 65539, 2162703, 2, 65536, 2162704, 2, 0, 2162709, 2, 0, 2162710, 2, 0, 2162714, 0, 65542, 2162715, 0, 196609, 2162716, 0, 196609, 2162717, 0, 196609, 2162718, 0, 196609, 2162719, 0, 196609, 2162720, 0, 196609, 2162721, 0, 196610, 2162729, 2, 196611, 2162737, 2, 65539, 2228239, 2, 131072, 2228240, 2, 0, 2228273, 2, 131075, 2359311, 2, 0, 2359312, 2, 0, 2359331, 2, 0, 2359332, 2, 0, 2359333, 2, 0, 2359334, 2, 0, 2424848, 2, 0, 2424849, 2, 0, 2424871, 2, 0, 2424873, 2, 0, 2424874, 2, 0, 2424875, 2, 0, 2490402, 2, 0, 2490403, 2, 0, 2490404, 2, 0, 2555938, 2, 0, 2555939, 2, 0, 2555943, 2, 0, 2555954, 2, 0, 2555955, 2, 0, 2621456, 2, 0, 2621457, 2, 0, 2621461, 2, 0, 2621481, 2, 0, 2621489, 2, 0, 2621490, 2, 0, 2621491, 2, 0, 2687025, 2, 0, 2687026, 2, 0, 2687027, 2, 0, 2883621, 2, 0, 2883622, 2, 0, 3080177, 2, 3, 3080180, 2, 196608, 3080181, 2, 196609, 3080182, 2, 196609, 3080183, 2, 196609, 3080184, 2, 196609, 3080185, 2, 0, 3080187, 2, 0, 3014690, 2, 0, 3014691, 2, 0, 3145713, 2, 65539, 3080226, 2, 0, 3080227, 2, 0, 3211249, 2, 65539, 3276785, 2, 65539, 3276788, 2, 0, 3276789, 2, 0, 3276790, 2, 0, 3276793, 2, 0, 3276794, 2, 0, 3342321, 2, 65539, 3342324, 2, 65539, 3407857, 2, 131075, 3407860, 2, 0, 3407861, 2, 0, 3407865, 2, 0, 3407869, 2, 0, 3473401, 2, 0, 3473403, 2, 0, 3604467, 2, 0, 3604468, 2, 2, 3604470, 2, 0, 3604471, 2, 1, 3604472, 2, 2, 3670003, 2, 131072, 3670004, 2, 131074, 3670006, 2, 65536, 3670007, 2, 4, 3670008, 2, 65538, 3735542, 2, 131072, 3735543, 2, 131073, 3735544, 2, 131074 )

[node name="bofl-logo" type="Sprite" parent="."]
position = Vector2( 184, -127 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Credits" type="Control" parent="."]
visible = false
margin_left = 1.0
margin_top = -239.0
margin_right = 361.0
margin_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Text_1" type="Label" parent="Credits"]
margin_left = -4.0
margin_top = -19.0
margin_right = 380.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 5 )
text = "BOX OF LIGHTS
ARTWORK
ketziel
CODE & SOUND EFFECTS
tehsquidge
CODE & MUSIC
thechae"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
margin_right = 360.0
margin_bottom = 240.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu"]
margin_left = 32.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "MOONSHOT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
margin_left = 120.0
margin_top = 88.0
margin_right = 240.0
margin_bottom = 280.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PLAY" type="Button" parent="MainMenu/Buttons" groups=[
"buttons",
]]
margin_right = 120.0
margin_bottom = 22.6826
mouse_default_cursor_shape = 2
text = "PLAY"

[node name="OPTIONS" type="Button" parent="MainMenu/Buttons" groups=[
"buttons",
]]
margin_top = 38.0
margin_right = 120.0
margin_bottom = 60.6826
mouse_default_cursor_shape = 2
text = "OPTIONS"

[node name="CREDITS" type="Button" parent="MainMenu/Buttons" groups=[
"buttons",
]]
margin_top = 76.0
margin_right = 120.0
margin_bottom = 98.6826
mouse_default_cursor_shape = 2
text = "CREDITS"

[node name="QUIT" type="Button" parent="MainMenu/Buttons" groups=[
"buttons",
]]
margin_top = 114.0
margin_right = 120.0
margin_bottom = 136.683
mouse_default_cursor_shape = 2
text = "QUIT"

[node name="Intro" type="Control" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 240.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Text_1" type="Label" parent="Intro"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 32.0
margin_top = 64.0
margin_right = 328.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 5 )
text = "Crashed on a 
desolate moon..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_2" type="Label" parent="Intro"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 364.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 5 )
text = "only 1 shot at getting
 off this rock alive!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_3" type="Label" parent="Intro"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 364.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 5 )
text = "3 repair modules,

scattered in the crash."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pickup" parent="Intro/Text_3" instance=ExtResource( 11 )]
position = Vector2( 183, 54 )
scale = Vector2( 2, 2 )

[node name="Text_4" type="Label" parent="Intro"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 364.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 5 )
text = "I can only carry one
back at a time."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_5" type="Label" parent="Intro"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 364.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 5 )
text = "Looks like I've disturbed
the locals too!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="."]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 240.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu"]
margin_left = 32.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 6 )
text = "OPTIONS"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="OptionsMenu"]
margin_left = 120.0
margin_top = 64.0
margin_right = 240.0
margin_bottom = 224.0
theme = SubResource( 8 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master" type="VBoxContainer" parent="OptionsMenu/Buttons"]
margin_right = 120.0
margin_bottom = 24.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="OptionsMenu/Buttons/Master"]
margin_right = 120.0
margin_bottom = 16.0
text = "MASTER VOL"

[node name="HSlider" type="HSlider" parent="OptionsMenu/Buttons/Master" groups=[
"buttons",
]]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="VBoxContainer" parent="OptionsMenu/Buttons"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 64.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="OptionsMenu/Buttons/Music"]
margin_right = 120.0
margin_bottom = 16.0
text = "MUSIC VOL"

[node name="HSlider" type="HSlider" parent="OptionsMenu/Buttons/Music" groups=[
"buttons",
]]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="VBoxContainer" parent="OptionsMenu/Buttons"]
margin_top = 80.0
margin_right = 120.0
margin_bottom = 104.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="OptionsMenu/Buttons/SFX"]
margin_right = 120.0
margin_bottom = 16.0
text = "SFX VOL"

[node name="HSlider" type="HSlider" parent="OptionsMenu/Buttons/SFX" groups=[
"buttons",
]]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="OptionsMenu/Buttons" groups=[
"buttons",
]]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 142.683
mouse_default_cursor_shape = 2
text = "BACK"

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 720.0
margin_bottom = 240.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Fade"]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -240 )
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 1.0
[connection signal="pressed" from="MainMenu/Buttons/PLAY" to="." method="_on_PLAY_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/OPTIONS" to="." method="_on_OPTIONS_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/CREDITS" to="." method="_on_CREDITS_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/QUIT" to="." method="_on_QUIT_pressed"]
[connection signal="pressed" from="OptionsMenu/Buttons/Back" to="." method="_on_OptionsBack_pressed"]
